@@ -3,3 +3,4 @@ style = autumn
 text_editor = default
 paper = letter
 ads_token = None
+ads_display = 20
