@@ -38,34 +38,38 @@ def help(key):
      A bibmanager config key.
   """
   if key == 'style':
-      print("\nThe 'style' key sets the color-syntax style of displayed BibTeX "
-            "entries.\nThe default style is 'autumn'.  "
-            "Available options are:\n{:s}\n"
-            "See http://pygments.org/demo/6780986/ for a demo of the style "
-            "options.\n\n"
-            "The current style is '{:s}'.".format(styles, get(key)))
+      print(f"\nThe '{key}' key sets the color-syntax style of displayed "
+             "BibTeX entries.\nThe default style is 'autumn'.  "
+            f"Available options are:\n{styles}\n"
+             "See http://pygments.org/demo/6780986/ for a demo of the style "
+             "options.\n\n"
+            f"The current style is '{get(key)}'.")
 
   elif key == 'text_editor':
-      print("\nThe 'text_editor' key sets the text editor to use when editing "
-            "the\nbibmanager manually (i.e., a call to: bibm edit).  By "
-            "default, bibmanager\nuses the OS-default text editor.\n\n"
-            "Typical text editors are: emacs, vim, gedit.\n"
-            "To set the OS-default editor, set text_editor to 'default'.\n"
-            "Note that aliases defined in the .bash are not accessible.\n\n"
-            "The current text editor is '{:s}'.".format(get(key)))
+      print(f"\nThe '{key}' key sets the text editor to use when editing "
+             "the\nbibmanager manually (i.e., a call to: bibm edit).  By "
+             "default, bibmanager\nuses the OS-default text editor.\n\n"
+             "Typical text editors are: emacs, vim, gedit.\n"
+             "To set the OS-default editor, set text_editor to 'default'.\n"
+             "Note that aliases defined in the .bash are not accessible.\n\n"
+            f"The current text editor is '{get(key)}'.")
 
   elif key == 'paper':
-      print("\nThe 'paper' key sets the default paper format for latex "
-            "compilation outputs\n(not for pdflatex, which is automatic).  "
-            "Typical options are 'letter'\n(e.g., for ApJ articles), or "
-            "'A4' (e.g., for A&A).\n\nThe current paper format is: '{:s}'.".
-            format(get(key)))
+      print(f"\nThe '{key}' key sets the default paper format for latex "
+             "compilation outputs\n(not for pdflatex, which is automatic).  "
+             "Typical options are 'letter'\n(e.g., for ApJ articles) or 'A4' "
+            f"(e.g., for A&A).\n\nThe current paper format is: '{get(key)}'.")
 
   elif key == 'ads_token':
-      print("\nThe 'ads_token' key sets the ADS token required for ADS requests."
-            "\nTo obtain a token follow the two steps described here:\n"
-            "  https://github.com/adsabs/adsabs-dev-api#access\n\n"
-            "The current ADS token is '{:s}'".format(get(key)))
+      print(f"\nThe '{key}' key sets the ADS token required for ADS requests"
+             ".\nTo obtain a token follow the two steps described here:\n"
+             "  https://github.com/adsabs/adsabs-dev-api#access\n\n"
+            f"The current ADS token is '{get(key)}'")
+
+  elif key == 'ads_display':
+      print(f"\nThe '{key}' key sets the number of entries to show at "
+             "a time,\nfor an ADS search querry.\n\n"
+            f"The current number of entries to display is {get(key)}.")
   else:
       # Call get() to trigger exception:
       get(key)
@@ -93,6 +97,7 @@ def display(key=None):
   text_editor  default
   paper        letter
   ads_token    None
+  ads_display  20
 
   >>> # Show an specific key:
   >>> cm.display('text_editor')
@@ -183,19 +188,21 @@ def set(key, value):
   config = configparser.ConfigParser()
   config.read(HOME+'config')
   if not config.has_option('BIBMANAGER', key):
-      raise ValueError("'{:s}' is not a valid bibmanager config key."
-                       "\nThe available keys are: {}".
-                       format(key, config.options('BIBMANAGER')))
+      raise ValueError(f"'{key}' is not a valid bibmanager config key.\n"
+                      f"The available keys are: {config.options('BIBMANAGER')}")
 
   # Check for exceptions:
   if key == 'style' and value not in STYLE_MAP.keys():
-      raise ValueError("'{:s}' is not a valid style option.  "
-          "Available options are:\n{:s}".format(value, styles))
+      raise ValueError(f"'{value}' is not a valid style option.  "
+                       f"Available options are:\n{styles}")
 
   # The code identifies invalid commands, but cannot assure that a
   # command actually applies to a text file.
   if key == 'text_editor' and value!='default' and shutil.which(value) is None:
-      raise ValueError("'{:s}' is not a valid text editor.".format(value))
+      raise ValueError(f"'{value}' is not a valid text editor.")
+
+  if key == 'ads_display' and (not value.isnumeric() or value=='0'):
+      raise ValueError(f"The {key} value must be a positive integer.")
 
   # Set value if there were no exceptions raised:
   config.set('BIBMANAGER', key, value)
